Name:           JsonGrammar
Version:        0.3.2
Synopsis:       Combinators for bidirectional JSON parsing
Description:   	Combinators for bidirectional JSON parsing


Author:         Martijn van Steenbergen
Maintainer:     martijn@van.steenbergen.nl
Stability:      Experimental
Copyright:      Some Rights Reserved (CC) 2010-2011 Martijn van Steenbergen
Homepage:       https://github.com/MedeaMelana/JsonGrammar
Bug-reports:    https://github.com/MedeaMelana/JsonGrammar/issues


Cabal-Version:  >= 1.6
License:        BSD3
License-file:   LICENSE
Category:       JSON, Language
Build-type:     Simple


Library
  Exposed-Modules:  Data.Iso,
                    Data.Iso.Core,
                    Data.Iso.TH,
                    Data.Iso.Common,
                    Language.JsonGrammar
  Build-Depends:    base >= 3.0 && < 4.6,
                    containers >= 0.3 && < 0.5,
                    aeson >= 0.6 && < 0.7,
                    semigroups >= 0.5 && < 0.9,
                    template-haskell >= 2.4 && < 2.8,
                    -- constraints copied from aeson-0.6.0.0:
                    attoparsec >= 0.8.6.1,
                    bytestring,
                    hashable >= 1.1.2.0,
                    text >= 0.11.0.2,
                    time,
                    unordered-containers >= 0.1.3.0,
                    vector >= 0.7.1

Source-Repository head
  Type:         git
  Location:     https://github.com/MedeaMelana/JsonGrammar
